2003-07-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/define-grob-interfaces.scm (cluster-beacon-interface): add
	cluster-beacon-interface

	* scm/define-grobs.scm (all-grob-descriptions): default to ramp.

	* scripts/convert-ly.py (FatalConversionError.conv): add cluster rule.

	* ly/spanners-init.ly (stopGroup): remove start/stopCluster.

	* lily/cluster.cc (brew_molecule): examine ClusterSpannerBeacons
	to get positions.

	* lily/cluster-engraver.cc: rewrite: catch cluster-note-events,
	make ClusterSpannerBeacon to record Y positions. This removes the
	need to switch off notes. Use \apply #notes-to-clusters { .. }  to
	make cluster-note-events.

2003-07-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in: Use lily/main.cc as identifying source file.

	* lily/accidental-engraver.cc: Compile fix: include protected-scm.hh.

	* config.hh.in: 
	* python/midi.c: Remove <pyphonX>/Python.h ifdef tree.

	* configure.in: Require PYTHON >= 2.0.

	* stepmake/aclocal.m4 (STEPMAKE_PYTHON_DEVEL): Rewrite.  Ask
	  $PYTHON for include dir location.
	(STEPMAKE_PYTHON): New function.  Use
	
	    PYTHON=foo ./configure

	  to override.

2003-07-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/translator-scheme.cc (LY_DEFINE): bugfix: always return
	something.

	* make/lilypond.redhat.spec.in (Group): change ftp.cs.uu.nl to
	ftp.lilypond.org everywhere.

2003-07-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/text-item.cc (interpret_new_markup): do only if new-markup
	detected.

	* Documentation/user/refman.itely (Grace notes): note on explicit
	contexts

2003-07-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: add a comment about LilyPond specific
	escape characters: ^, - and _, in the syntax table.

	* Documentation/user/appendices.itely: a majuscule fix.

2003-07-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/trills.ly (endHorizScript): fixes.

	* input/test/chord-names-jazz.ly: merge in alternate Jazz
	notation, move from regression.
